force-app/src/objects/npsp__DataImport__c.object
<CustomObject>
    <description>Custom object to hold denormalized data records that can be imported into the Nonprofit Success Pack.</description>
    <fields>
        <fullName>Account1_CIS_HE_Associate_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account1 CIS HE Associate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account1_CIS_HE_Bachelors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account1 CIS HE Bachelors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account1_CIS_HE_Doctorate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account1 CIS HE Doctorate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account1_CIS_HE_Masters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account1 CIS HE Masters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account1_Email_Address__c</fullName>
        <description>The email address of the organization</description>
        <label>Account1 Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account1_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account1 External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_For_profit_or_Non_profit__c</fullName>
        <inlineHelpText>Account1.CIS_HE_For_profit_or_Non_profit__c</inlineHelpText>
        <label>Account1 For-profit or Non-profit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Profit</fullName>
                </value>
                <value>
                    <fullName>Non-profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account1_Location__c</fullName>
        <inlineHelpText>Account1.CIS_HE_Location__c</inlineHelpText>
        <label>Account1 Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Urban</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account1_Physical_City__c</fullName>
        <inlineHelpText>Account1.ShippingCity</inlineHelpText>
        <label>Account1 Physical City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Physical_Country__c</fullName>
        <inlineHelpText>Account1.ShippingCountry</inlineHelpText>
        <label>Account1 Physical Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Physical_Postal_Code__c</fullName>
        <inlineHelpText>Account1.ShippingPostalCode</inlineHelpText>
        <label>Account1 Physical Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Physical_Street__c</fullName>
        <inlineHelpText>Account1.ShippingStreet</inlineHelpText>
        <label>Account1 Physical Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Religiously_Affiliation__c</fullName>
        <inlineHelpText>Account1.CIS_HE_Religiously_Affiliation__c</inlineHelpText>
        <label>Account1 Religiously Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None/independent</fullName>
                </value>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Non-denominational</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>Other Christian</fullName>
                </value>
                <value>
                    <fullName>Islamic</fullName>
                </value>
                <value>
                    <fullName>Other Religious Affiliation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account1_Status_Reason__c</fullName>
        <inlineHelpText>Account1.CIS_ALL_Status_Reason__c</inlineHelpText>
        <label>Account1 Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account1_Status__c</fullName>
        <inlineHelpText>Account1.CIS_ALL_Account_Status__c</inlineHelpText>
        <label>Account1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account1_VAT_Registration_Number__c</fullName>
        <inlineHelpText>Account1.CIS_ALL_VAT_Registration_Number__c</inlineHelpText>
        <label>Account1 VAT Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_CIS_HE_Associate_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account2 CIS HE Associate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account2_CIS_HE_Bachelors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account2 CIS HE Bachelors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account2_CIS_HE_Doctorate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account2 CIS HE Doctorate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account2_CIS_HE_Masters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account2 CIS HE Masters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account2_Email_Address__c</fullName>
        <label>Account2 Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account2_External_ID__c</fullName>
        <label>Account2 External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_For_profit_or_Non_profit__c</fullName>
        <inlineHelpText>Account2.CIS_HE_For_profit_or_Non_profit__c</inlineHelpText>
        <label>Account2 For-profit or Non-profit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Profit</fullName>
                </value>
                <value>
                    <fullName>Non-profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account2_Location__c</fullName>
        <inlineHelpText>Account2.CIS_HE_Location__c</inlineHelpText>
        <label>Account2 Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Urban</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account2_Public_or_Private__c</fullName>
        <inlineHelpText>Account2.CIS_HE_Public_or_Private__c</inlineHelpText>
        <label>Account2 Public or Private</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account2_Religiously_Affiliation__c</fullName>
        <inlineHelpText>Account2.CIS_HE_Religiously_Affiliation__c</inlineHelpText>
        <label>Account2 Religiously Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None/independent</fullName>
                </value>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Non-denominational</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>Other Christian</fullName>
                </value>
                <value>
                    <fullName>Islamic</fullName>
                </value>
                <value>
                    <fullName>Other Religious Affiliation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account2_Status_Reason__c</fullName>
        <inlineHelpText>Account2.CIS_ALL_Status_Reason__c</inlineHelpText>
        <label>Account2 Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account2_Status__c</fullName>
        <inlineHelpText>Account2.CIS_ALL_Account_Status__c</inlineHelpText>
        <label>Account2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account2_VAT_Registration_Number__c</fullName>
        <inlineHelpText>Account2.CIS_ALL_VAT_Registration_Number__c</inlineHelpText>
        <label>Account2 VAT Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Public_or_Private__c</fullName>
        <inlineHelpText>Account1.CIS_HE_Public_or_Private__c</inlineHelpText>
        <label>Account1 Public or Private</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation1_CIS_Role__c</fullName>
        <inlineHelpText>Affiliation1.CIS_ALL_Role__c</inlineHelpText>
        <label>Affiliation1 CIS Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIS_HE_Chief Admission Officer</fullName>
                </value>
                <value>
                    <fullName>CIS_HE_International Admission Officer</fullName>
                </value>
                <value>
                    <fullName>CIS_HE_Financial Aid Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Chief Educational Officer/Head of School</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Accreditation Coordinator</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Billing/Invoice Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Educator Recruitment Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Career/University Guidance Counsellor</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_ School Board Chair/Chief Governance Officer/Owner</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_School Administration Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation1_Status__c</fullName>
        <description>Affiliation1.npe5__Status__c</description>
        <label>Affiliation1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation2_CIS_Role__c</fullName>
        <inlineHelpText>Affiliation2.CIS_ALL_Role__c</inlineHelpText>
        <label>Affiliation2 CIS Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIS_HE_Chief Admission Officer</fullName>
                </value>
                <value>
                    <fullName>CIS_HE_International Admission Officer</fullName>
                </value>
                <value>
                    <fullName>CIS_HE_Financial Aid Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Chief Educational Officer/Head of School</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Accreditation Coordinator</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Billing/Invoice Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Educator Recruitment Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Career/University Guidance Counsellor</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_ School Board Chair/Chief Governance Officer/Owner</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_School Administration Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation2_Status__c</fullName>
        <description>Affiliation2.npe5__Status__c</description>
        <label>Affiliation2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact1_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contact1 External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact1_Gender__c</fullName>
        <label>Contact1 Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
                <value>
                    <fullName>I would rather not answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact1_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact1.Inactive__c</inlineHelpText>
        <label>Contact1 Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact1_Middlename__c</fullName>
        <inlineHelpText>Contact1.Middlename</inlineHelpText>
        <label>Contact1 Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Preferred_First_Name__c</fullName>
        <inlineHelpText>Contact1.Preferred_First_Name__c</inlineHelpText>
        <label>Contact1 Preferred First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Status__c</fullName>
        <label>Contact1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact2_CIS_Role__c</fullName>
        <inlineHelpText>Contact2.CIS_ALL_Role__c</inlineHelpText>
        <label>Contact2 CIS Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIS_HE_Chief Admission Officer</fullName>
                </value>
                <value>
                    <fullName>CIS_HE_International Admission Officer</fullName>
                </value>
                <value>
                    <fullName>CIS_HE_Financial Aid Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Chief Educational Officer/Head of School</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Accreditation Coordinator</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Billing/Invoice Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Educator Recruitment Contact</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_Career/University Guidance Counsellor</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_ School Board Chair/Chief Governance Officer/Owner</fullName>
                </value>
                <value>
                    <fullName>CIS_SSE_School Administration Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact2_External_ID__c</fullName>
        <label>Contact2 External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Gender__c</fullName>
        <label>Contact2 Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
                <value>
                    <fullName>I would rather not answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact2_Middlename__c</fullName>
        <inlineHelpText>Contact2.Middlename</inlineHelpText>
        <label>Contact2 Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Preferred_First_Name__c</fullName>
        <inlineHelpText>Contact2.Preferred_First_Name__c</inlineHelpText>
        <label>Contact2 Preferred First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Status__c</fullName>
        <label>Contact2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opporrtunity_Enquiry_Accepted_Date__c</fullName>
        <inlineHelpText>Opportunity.Enquiry_Accepted_Date__c</inlineHelpText>
        <label>Opporrtunity Enquiry Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_HE_CIS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity HE CIS External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__ACH_Consent__c</fullName>
        <description>The Elevate Giving Page consent message the donor agreed to.</description>
        <inlineHelpText>The Elevate Giving Page consent message the donor agreed to.</inlineHelpText>
        <label>Payment ACH Consent Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Account1ImportStatus__c</fullName>
        <label>Account1 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account1Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account1 Imported</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (Account1 Imported)</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Account1_City__c</fullName>
        <inlineHelpText>Account1.BillingCity</inlineHelpText>
        <label>Account1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account1_Country__c</fullName>
        <inlineHelpText>Account1.BillingCountry</inlineHelpText>
        <label>Account1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account1_Name__c</fullName>
        <inlineHelpText>Account1.Name</inlineHelpText>
        <label>Account1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account1_Phone__c</fullName>
        <inlineHelpText>Account1.Phone</inlineHelpText>
        <label>Account1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Account1_State_Province__c</fullName>
        <inlineHelpText>Account1.BillingState</inlineHelpText>
        <label>Account1 State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account1_Street__c</fullName>
        <inlineHelpText>Account1.BillingStreet</inlineHelpText>
        <label>Account1 Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Account1_Website__c</fullName>
        <inlineHelpText>Account1.Website</inlineHelpText>
        <label>Account1 Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Account1_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Account1.BillingPostalCode</inlineHelpText>
        <label>Account1 Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account2ImportStatus__c</fullName>
        <label>Account2 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account2Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account2 Imported</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (Account2 Imported)</relationshipLabel>
        <relationshipName>Data_Imports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Account2_City__c</fullName>
        <inlineHelpText>Account2.BillingCity</inlineHelpText>
        <label>Account2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account2_Country__c</fullName>
        <inlineHelpText>Account2.BillingCountry</inlineHelpText>
        <label>Account2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account2_Name__c</fullName>
        <inlineHelpText>Account2.Name</inlineHelpText>
        <label>Account2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account2_Phone__c</fullName>
        <inlineHelpText>Account2.Phone</inlineHelpText>
        <label>Account2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Account2_State_Province__c</fullName>
        <inlineHelpText>Account2.BillingState</inlineHelpText>
        <label>Account2 State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account2_Street__c</fullName>
        <inlineHelpText>Account2.BillingStreet</inlineHelpText>
        <label>Account2 Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Account2_Website__c</fullName>
        <inlineHelpText>Account2.Website</inlineHelpText>
        <label>Account2 Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Account2_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Account2.BillingPostalCode</inlineHelpText>
        <label>Account2 Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Additional_Object_JSON__c</fullName>
        <description>This field allows a dynamic number of records for a dynamic number of objects to be created from a single Data Import record. Additional object information is stored here in JSON format.</description>
        <inlineHelpText>This field allows a dynamic number of records for a dynamic number of objects to be created from a single Data Import record. Additional object information is stored here in JSON format.</inlineHelpText>
        <label>Additional Object JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__ApexJobId__c</fullName>
        <description>The ApexJobID of the Batch Job that processed the record.</description>
        <inlineHelpText>The ApexJobID of the Batch Job that processed the record.</inlineHelpText>
        <label>ApexJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Campaign_Member_Status__c</fullName>
        <label>Campaign Member Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1ImportStatus__c</fullName>
        <label>Contact1 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact1 Imported</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPSP Data Imports (Contact1 Imported)</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Alternate_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__AlternateEmail__c</inlineHelpText>
        <label>Contact1 Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Birthdate__c</fullName>
        <inlineHelpText>Contact1.Birthdate</inlineHelpText>
        <label>Contact1 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Consent_Message__c</fullName>
        <description>Provides details on what the Contact opted in to.</description>
        <inlineHelpText>Provides details on what the Contact opted in to.</inlineHelpText>
        <label>Contact1 Consent Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Consent_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a Contact consented to opt in.</description>
        <inlineHelpText>Determines if a Contact consented to opt in.</inlineHelpText>
        <label>Contact1 Consent Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Firstname__c</fullName>
        <inlineHelpText>Contact1.Firstname</inlineHelpText>
        <label>Contact1 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Home_Phone__c</fullName>
        <inlineHelpText>Contact1.HomePhone</inlineHelpText>
        <label>Contact1 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Lastname__c</fullName>
        <inlineHelpText>Contact1.Lastname</inlineHelpText>
        <label>Contact1 Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Mobile_Phone__c</fullName>
        <inlineHelpText>Contact1.MobilePhone</inlineHelpText>
        <label>Contact1 Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Other_Phone__c</fullName>
        <inlineHelpText>Contact1.OtherPhone</inlineHelpText>
        <label>Contact1 Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Personal_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__HomeEmail__c</inlineHelpText>
        <label>Contact1 Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Preferred_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__Preferred_Email__c</inlineHelpText>
        <label>Contact1 Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Preferred_Phone__c</fullName>
        <inlineHelpText>Contact1.npe01__PreferredPhone__c</inlineHelpText>
        <label>Contact1 Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Salutation__c</fullName>
        <inlineHelpText>Contact1.Salutation</inlineHelpText>
        <label>Contact1 Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Title__c</fullName>
        <inlineHelpText>Contact1.Title</inlineHelpText>
        <label>Contact1 Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Work_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__WorkEmail__c</inlineHelpText>
        <label>Contact1 Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npsp__Contact1_Work_Phone__c</fullName>
        <inlineHelpText>Contact1.npe01__WorkPhone__c</inlineHelpText>
        <label>Contact1 Work Phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>